--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Make Your React Widgets</title>
+	<title>Light Weight Preact Widgets</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 	<meta name="description" content="preact-widgets-boilerplate">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -12,7 +12,11 @@
 
   <!-- DEMO CSS ONLY -->
   <style media="screen">
-    body{padding-top:40px;padding-bottom:40px;background-color:#F4F1EA}.avatar,.line{background:#37394C;display:block}.container{width:100%;max-width:700px;margin:0 auto}.avatar{width:60px;height:60px;margin-bottom:10px}.line{height:6px;width:100%;margin-bottom:8px;opacity:.7}.line.one{width:80%}.line.two{width:60%}.line.three{width:40%}.line.four{width:90%}
+    body{background-color:#F4F1EA}.avatar,.line{background:#37394C;display:block}.container{width:100%;max-width:700px;margin:0 auto}.avatar{width:60px;height:60px;margin-bottom:10px}.line{height:6px;width:100%;margin-bottom:8px;opacity:.7}p{font-family:sans-serif;color:#37394C;font-weight:100;line-height:24px}a,h3{font-family:sans-serif;color:#37394C;font-weight:600;font-size:16px}.box{width:60%;float:left;overflow:hidden;height:300px;display:inline-block;margin:30px 0}a{color:#62B83C}
+
+    .box {
+      overflow: scroll;
+    }
   </style>
   <!-- DEMO ONLY -->
 </head>
@@ -24,29 +28,43 @@
     <div class="line three"></div>
     <div class="line two"></div>
     <div class="line four"></div>
-    <div class="line one"></div>
-    <div class="line four"></div>
-    <div class="line"></div>
-    <div class="line four"></div>
-    <div class="line four"></div>
-    <div class="line four"></div>
 
+    <p>
+      This boilerplate will help you create a Preact widget that you can ship probably over your CDN so other websites can re-use it and benefit from it.
+      The final bundle is JavScript, UMD and should integrate smoothly into any website and web application. The Sign in form below is it!
+    </p>
+
+    <h3>USAGE</h3>
+    <a href="https://github.com/zouhir/preact-widgets-boilerplate">Please Check README.md</a>
+
+    <h3>DEMO</h3>
     <!-- your widget -->
-    <div id="my-external-login-widget">
-      <script src="/build/bundle.js"></script>
+    <div id="external-widget-place">
+      <script async src="/build/bundle.js"></script>
     </div>
     <!--// tada.. -->
 
     <div class="line"></div>
     <div class="line four"></div>
-    <div class="line four"></div>
-    <div class="line four"></div>
-    <div class="line"></div>
-    <div class="line four"></div>
-    <div class="line four"></div>
     <div class="line three"></div>
     <div class="line two"></div>
     <div class="line four"></div>
+    <h3>MULTIPLE CLONES</h3>
+    <p>Such a login widget might need to be in multiple places around the page, eg. sidebar or off-canvas nav or, really anywhere else.</p>
+    <p>Just include the bundle once and clone it as much as you want just like the following example</p>
+
+    <div class="box-here">
+      <script type="text/'javascript" data-widget="login">
+        [{"clone": ["external-widget-place"]}]
+      </script>
+    </div>
+
+    <div class="box-here-too">
+      <script type="text/'javascript" data-widget>
+        [{"clone": ["external-widget-place"]}]
+      </script>
+    </div>
+
   </div>
 </body>
 </html>
