--- a/index.html
+++ b/index.html
@@ -10,47 +10,59 @@
 	<meta name="apple-mobile-web-app-title" content="preact-boilerplate">
 	<meta name="application-name" content="preact-widgets-boilerplate">
 
-  <!-- DEMO CSS ONLY -->
-  <style media="screen">
-    body{background-color:#F4F1EA}.avatar,.line{background:#37394C;display:block}.container{width:100%;max-width:700px;margin:0 auto}.avatar{width:60px;height:60px;margin-bottom:10px}.line{height:6px;width:100%;margin-bottom:8px;opacity:.7}p{font-family:sans-serif;color:#37394C;font-weight:100;line-height:24px}a,h3{font-family:sans-serif;color:#37394C;font-weight:600;font-size:16px}.box{width:60%;float:left;overflow:hidden;height:300px;display:inline-block;margin:30px 0}a{color:#62B83C}
-    .box {
-      overflow: scroll;
-    }
-  </style>
-  <!-- DEMO ONLY -->
+	<style media="screen">
+		.bold-link,h1,h2{font-weight:700}*{box-sizing:border-box}body{background:#F4F1EA;font-family:sans-serif;color:#37394C;padding:15px;line-height:24px}.container{width:100%;max-width:900px;margin:0 auto}.logo{margin:0 auto;display:block;width:200px}.logo img{max-width:100%}h1{font-size:30px;text-align:center}h2{font-size:24px;text-align:left}.demo-box{border:2px dashed #CCC;padding:30px 10px 10px;position:relative; margin-bottom:70px;}.demo-box sup{position:absolute;size:9px;opacity:.7;top:4px;left:10px}.demo-box-1{width:100%;max-width:400px;margin:0 auto}.row-center{width:100%;display:block;position:relative;margin-bottom:15px;text-align:center}.row-center a{display:inline-block}.bold-link{color:#269FAD;margin-right:30px}
+	</style>
+
 </head>
 <body>
-  <div class="container">
-    <div class="avatar"></div>
-    <p>
-      This boilerplate will help you create a Preact widget that you can ship probably over your CDN so other websites can re-use it and benefit from it.
-      The final bundle is JavScript, UMD and should integrate smoothly into any website and web application. The Sign in form below is it!
-    </p>
+	<div class="container">
 
-    <h3>USAGE</h3>
-    <a href="https://github.com/zouhir/preact-widgets-boilerplate">Please Check README.md</a>
+	  <div class="logo">
+	    <img src="https://github.com/zouhir/preact-habitat/raw/master/artwork.png?raw=true" alt="Preact Habitat" />
+	  </div>
+	  <h1>Preact Habitat</h1>
+	  <div class="row-center">
+	    <a class="github-button" href="https://github.com/zouhir/preact-habitat" data-icon="octicon-star" data-style="mega" data-count-href="/zouhir/preact-habitat/stargazers" data-count-api="/repos/zouhir/preact-habitat#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star zouhir/preact-habitat on GitHub">Star</a>
+	  </div>
+		<div class="row-center">
+			<a href="#" class="bold-link">Demo \ Example Repo</a>
+			<a href="#" class="bold-link">Habitat Repo</a>
+		</div>
+	  <p>
+	    Preact habitat is a 1kb module that will help you ship your Preact components to any world wide DOM page in a very easy and neat way.
+	  </p>
+	  <h2>Demo</h2>
 
-    <h3>DEMO</h3>
+		<!-- that's how we embed the widget using habitat -->
+	  <div class="demo-box" id="thrid-party-login-wrapper">
+	    <sup>total: 18kb minified, 7kb gzipped</sup>
 
-		<div data-widget-id="one-more-here-hop-hop"></div>
+			<!-- THAT IS ALL YOU NEED -->
+			<script async src="/build/bundle.js" type="text/javascript"></script>
 
-    <h3>MULTIPLE CLONES</h3>
-    <p>Such a login widget might need to be in multiple places around the page, eg. sidebar or off-canvas nav or, really anywhere else.</p>
-    <p>Just include the bundle once and clone it as much as you want just like the following example</p>
+	  </div>
+		<!-- //end that's how we embed the widget using habitat -->
 
-    <!-- your widget -->
-    <div id="external-widget-place">
-      <script async src="/build/bundle.js">
-				[
-					{
-						"mount": ["one-more-here-hop-hop"]
-					}
-				]
+		<h2>More Capabilities</h2>
+		<p>Should you need to include the widget multiple times in a page? That's too easy</p>
+
+		<!-- clone number 1 -->
+		<div class="demo-box">
+			<sup>total: 0kb</sup>
+			<!-- IMPORTANT:
+				@type: 'widget/config'
+				config: valid JSON with value of that widget wrapper div id
+		 	-->
+			<script type="widget/config">
+				{
+					"clone": "thrid-party-login-wrapper"
+				}
 			</script>
-    </div>
-    <!--// tada.. -->
-		<!-- // Clone 2 -->
+		</div>
+	</div>
 
-  </div>
+
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
