async defer script

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	    <sup>total: 18kb minified, 7kb gzipped</sup>
 
 			<!-- THAT IS ALL YOU NEED -->
-			<script async src="/build/bundle.js" type="text/javascript"></script>
+			<script async defer src="/build/bundle.js" type="text/javascript"></script>
 
 	  </div>
 		<!-- //end that's how we embed the widget using habitat -->
