preact habitat updated

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	    <a class="github-button" href="https://github.com/zouhir/preact-habitat" data-icon="octicon-star" data-style="mega" data-count-href="/zouhir/preact-habitat/stargazers" data-count-api="/repos/zouhir/preact-habitat#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star zouhir/preact-habitat on GitHub">Star</a>
 	  </div>
 		<div class="row-center">
-			<a href="#" class="bold-link">Demo \ Example Repo</a>
-			<a href="#" class="bold-link">Habitat Repo</a>
+			<a href="https://github.com/zouhir/preact-widgets-boilerplate" class="bold-link">Demo \ Example Repo</a>
+			<a href="https://github.com/zouhir/preact-habitat" class="bold-link">Habitat Repo</a>
 		</div>
 	  <p>
 	    Preact habitat is a 1kb module that will help you ship your Preact components to any world wide DOM page in a very easy and neat way.
@@ -39,7 +39,7 @@
 	    <sup>total: 18kb minified, 7kb gzipped</sup>
 
 			<!-- THAT IS ALL YOU NEED -->
-			<script async defer src="/build/bundle.js" type="text/javascript"></script>
+			<script async src="/build/bundle.js" type="text/javascript"></script>
 
 	  </div>
 		<!-- //end that's how we embed the widget using habitat -->
@@ -60,6 +60,17 @@
 				}
 			</script>
 		</div>
+		<h2>How to use: single widget</h2>
+		<p>Your HTML:</p>
+		<script src="https://gist.github.com/zouhir/ca34fa2cfcbec2d2f1bde24639f03d68.js"></script>
+		<p>Your JavaScript bundle entry:</p>
+		<script src="https://gist.github.com/zouhir/744d626adaaf4319ab1d7f02b0932958.js"></script>
+
+
+		<h2>How to use: Multiple clones</h2>
+		<p>Only change your HTML to:</p>
+		<script src="https://gist.github.com/zouhir/ab872e72e85308636bc9a5639c55010a.js"></script>
+
 	</div>
 
 
