docs update in index

--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
 		<p>Only change your HTML to:</p>
 		<script src="https://gist.github.com/zouhir/ab872e72e85308636bc9a5639c55010a.js"></script>
 
+		<h2>Notes:</h2>
+		<p>
+			- Please insure the library target type is <b>UMD</b>
+		</p>
+		<p>
+			- Please always watch your final bundle size, bloated bundles make puppies sick 🐶 😔
+		</p>
+		<p>
+			- If you have used this module, please let me know! we can start a gallery page
+		</p>
+		<p>
+			- imrovments to the module, demo or docs are more than welcome 👏
+		</p>
+		<br />
+		<br />
+		<p>Built with 💛 and <a href="https://preactjs.com/">Preact</a> by <a href="http://zouhir.org">Zouhir Chahoud</a></p>
 	</div>
 
 
