--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 	  <h2>Demo</h2>
 
 		<!-- that's how we embed the widget using habitat -->
-	  <div class="demo-box" id="thrid-party-login-wrapper">
+	  <div class="demo-box" id="thrid-party-login-wrapper" data-prop-title="Fantastic">
 	    <sup>total: 18kb minified, 7kb gzipped</sup>
 
 			<!-- THAT IS ALL YOU NEED -->
@@ -44,49 +44,7 @@
 	  </div>
 		<!-- //end that's how we embed the widget using habitat -->
 
-		<h2>More Capabilities</h2>
-		<p>Should you need to include the widget multiple times in a page? That's too easy</p>
-
-		<!-- clone number 1 -->
-		<div class="demo-box">
-			<sup>total: 0kb</sup>
-			<!-- IMPORTANT:
-				@type: 'widget/config'
-				config: valid JSON with value of that widget wrapper div id
-		 	-->
-			<script type="widget/config">
-				{
-					"clone": "thrid-party-login-wrapper"
-				}
-			</script>
-		</div>
-		<h2>How to use: single widget</h2>
-		<p>Your HTML:</p>
-		<script src="https://gist.github.com/zouhir/ca34fa2cfcbec2d2f1bde24639f03d68.js"></script>
-		<p>Your JavaScript bundle entry:</p>
-		<script src="https://gist.github.com/zouhir/744d626adaaf4319ab1d7f02b0932958.js"></script>
-
-
-		<h2>How to use: Multiple clones</h2>
-		<p>Only change your HTML to:</p>
-		<script src="https://gist.github.com/zouhir/ab872e72e85308636bc9a5639c55010a.js"></script>
-
-		<h2>Notes:</h2>
-		<p>
-			- Please insure the library target type is <b>UMD</b>
-		</p>
-		<p>
-			- Please always watch your final bundle size, bloated bundles make puppies sick 🐶 😔
-		</p>
-		<p>
-			- If you have used this module, please let me know! we can start a gallery page
-		</p>
-		<p>
-			- imrovments to the module, demo or docs are more than welcome 👏
-		</p>
-		<br />
-		<br />
-		<p>Built with 💛 and <a href="https://preactjs.com/">Preact</a> by <a href="http://zouhir.org">Zouhir Chahoud</a></p>
+		<p>Built with 💛 and <a href="https://preactjs.com/">Preact</a> by <a href="http://zouhir.org">Zouhir</a></p>
 	</div>
 
 
