Updating all the packages to latest like there is no tomorrow

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         {
           "title": "Codepen App Login",
           "btnAccentColor": "#FFBB41",
-          "btnText": "Sign in NOW!"
+          "btnText": "Sign in NOW!!"
         }
       </script>
 			<!-- THAT IS ALL YOU NEED -->
